--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,11 @@ uuid = "7498b32a-fcec-4368-b918-411a4642cb4f"
 authors = ["Boris Orostica Navarrete"]
 version = "1.0.0-DEV"
 
+[deps]
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
+
 [compat]
-julia = "1"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
