--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,5 +46,9 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
+      - name: "TestPlotlyJS dev setup"
+        shell: bash
+        run: |
+          julia --color=yes --project=. -e "using Pkg; Pkg.develop(PackageSpec(; path=\"./PlotlyJS\"));"
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
