--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["Boris Orostica Navarrete"]
 version = "1.0.0-DEV"
 
 [deps]
+Kaleido_jll = "f7e6163d-2fa5-5f23-b69c-1db539e41963"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 
 [compat]
+Kaleido_jll = "0.1"
 julia = "1.9"
 
 [extras]
